# llm-agent-v2

./: .api.pid  .env  .env.dev  .env.prod  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Makefile  README.md  STRUCTURE.txt  clickup_mcp_troubleshooting.md  docker-compose.yml  main.py  nohup.out  normalize.py  pyproject.toml
backend/: Dockerfile  README.md  __init__.py  pyproject.toml
backend/.omc/: project-memory.json
backend/api/: dependencies.py  main.py
backend/config/: preset_loader.py  settings.py  settings_vlm.py
backend/domain/: __init__.py  component_dictionary.py  doc_type_mapping.py
backend/elasticsearch/: Dockerfile
backend/llm_infrastructure/: __init__.py  text_quality.py
backend/services/: __init__.py  batch_answer_service.py  chat_history_service.py  chat_service.py  device_cache.py  document_service.py  document_summarization_service.py  embedding_service.py  es_chunk_v3_search_service.py  es_ingest_service.py  es_search_service.py  es_summarization_service.py  feedback_service.py  rag_service.py  raptor_ingest_service.py  raptor_rebuild_service.py  retrieval_effective_config.py  retrieval_evaluation_service.py  retrieval_pipeline.py  retrieval_run_store.py  search_service.py
backend/tests/: conftest.py  test_abbreviation_resolve_node.py  test_agent_additional_device_search_flag.py  test_agent_graph_mq_bypass.py  test_agent_guided_resume_validation.py  test_agent_mq_fallback_reasons.py  test_agent_querygen_temperature_policy.py  test_agent_routing_improvements.py  test_answer_language_templates.py  test_auto_parse_node_events.py  test_chat_flow_rrf_eval_runner.py  test_chunk_v3_contracts.py  test_chunk_version_startup_wiring.py  test_chunking.py  test_component_dictionary.py  test_device_suggestion.py  test_doc_lookup.py  test_doc_type_diversity_quota.py  test_doc_type_mapping.py  test_embedding_engine.py  test_embedding_service.py  test_equip_id_lookup_extraction.py  test_es_build_filter_doc_ids.py  test_es_chunk_v3_search_service.py  test_es_parse_hits_null_score.py  test_es_search_service_override_concurrency.py  test_es_stage1_app_rrf.py  test_expand_related_docs_node.py  test_gcb_equip_id_es_sync.py  test_general_ts_empty_refs_prompt.py  test_history_check_node.py  test_history_routing.py  test_issue_flow_interrupts.py  test_language_detection.py  (+37 more)
(+1494 files in other folders)
