[project]
name = "llm-agent-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.123.9",
    "httpx>=0.28.1",
    "numpy>=2.3.5",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.1",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.1.2",
    "uvicorn>=0.38.0",
]
