[project]
name = "llm-agent-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "elasticsearch>=8.0.0,<9.0.0",
    "fastapi>=0.123.9",
    "httpx>=0.28.1",
    "langchain>=1.2.0",
    "langgraph>=1.0.5",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "openai>=2.14.0",
    "pandas>=3.0.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.1",
    "pyyaml>=6.0",
    "rank-bm25>=0.2.2",
    "rapidfuzz>=3.0.0",
    "sentence-transformers>=5.1.2",
    "uvicorn>=0.38.0",
]
