[project]
name = "pe-agent-backend"
version = "0.1.0"
description = "PE Agent Backend - RAG-based troubleshooting system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.9",
    "diskcache>=5.4.0",
    "sentence-transformers>=2.2.0",
    "rank-bm25>=0.2.2",
    "elasticsearch>=8.0.0,<9.0.0",
    "langgraph>=1.0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.hatch.build.targets.wheel]
# Explicitly list top-level packages to include in the build
packages = [
    "api",
    "config",
    "domain",
    "llm_infrastructure",
    "services",
]
